--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
-  "proxy": "https://power-gym-server.herokuapp.com",
+  "proxy": "https://power-gym-server.herokuapp.com/api",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
